--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -28,6 +28,13 @@ jobs :
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name : Login to GitHub Container Registry
+        uses : docker/login-action@v1
+        with :
+          registry : ghcr.io
+          username : ${{ github.repository_owner }}
+          password : ${{ secrets.GITHUB_TOKEN }}
       
       - name : Determine Tag Name
         id : tag
@@ -45,5 +52,7 @@ jobs :
           context: .
           # platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=azuracast/azuracast_nginx_proxy_letsencrypt:${{ steps.tag.outputs.TAG }}
-          tags : azuracast/azuracast_nginx_proxy_letsencrypt:${{ steps.tag.outputs.TAG }}
+          tags : |
+            azuracast/azuracast_nginx_proxy_letsencrypt:${{ steps.tag.outputs.TAG }}
+            ghcr.io/azuracast/nginx_proxy_letsencrypt:${{ steps.tag.outputs.TAG }}
           push : true
